--- a/game.html
+++ b/game.html
@@ -22,7 +22,7 @@
 <body>
     <canvas id="gameCanvas"></canvas>
     <audio id="metalMusic" loop>
-        <source src="your-metal-track.mp3" type="audio/mpeg">
+        <source src="music1.mp3" type="audio/mpeg">
     </audio>
     <script>
         // Telegram WebApp Initialization
